--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --require ts-node/register 'test/**/*.ts'",
     "start:dev": "npx nodemon",
     "start": "npm run build && nodemon build/index.js",
     "build": "rimraf ./build && tsc"
@@ -16,14 +16,24 @@
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "firebase": "^10.3.1",
-    "fs": "^0.0.1-security"
+    "firebase-functions": "^4.4.1",
+    "firebase-mock": "^2.3.2",
+    "fs": "^0.0.1-security",
+    "sinon": "^15.2.0",
+    "sinon-chai": "^3.7.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.6",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.6.0",
+    "@types/supertest": "^2.0.12",
+    "chai": "^4.3.8",
+    "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.1",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
