--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
-    "target": "es5",                          
+    "target": "ES6",                          
     "module": "commonjs",                    
     "lib": ["es6"],                     
     "allowJs": true,
     "outDir": "build",                          
-    "rootDir": "src",
+    "rootDir": ".",
     "strict": true,         
     "noImplicitAny": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["mocha", "chai"],
   }
 }
